--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Chat</title>
     <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/styles.css">
     <style>
         .message { margin-bottom: 10px; }
         .self { text-align: right; }
